k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: "/$1"
spec:
  ingressClassName: nginx  # Replace with the actual Ingress class name if needed
  rules:
    - http:
        paths:
          - pathType: ImplementationSpecific
            path: /?(.*)
            backend:
              service:
                name: client-cluster-ip-service
                port:
                  number: 3000
          - pathType: ImplementationSpecific
            path: /api/?(.*)
            backend:
              service:
                name: server-cluster-ip-service
                port:
                  number: 5000
